# delila-rs

./: .clauderules  .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  GEMINI.md  LICENSE  README.md  REFACTORING_SUGGESTIONS.md  build.rs  clean_architecture_evaluation.md  config.toml  deny.toml
.github/workflows/: ci.yml
FW/13july2026/: RegisterFile13iulie.json
TODO/: 15_digitizer_implementation.md  16_pha1_decoder_implementation.md  19_settings_ui.md  21_gemini_review_improvements.md  22_amax_decoder_implementation.md  23_event_builder_implementation.md  25_apply_digitizer_via_zmq.md  26_multi_digitizer_scaling.md  27_settings_ui_v2.md  28_psd1_pha1_parameter_overhaul.md  29_psd1_waveform_debug.md  30_mvp_march_roadmap.md  32_stop_command_timeout.md  33_delila2root_converter.md  34_tuneup_software_trigger.md  35_waveform_recording_warning.md  36_accumulated_waveform.md  37_grafana_monitoring.md  39_cross_run_eos_fix.md  40_decode_loop_parallelization.md  41_start_stop_restructure.md  44_a3818_open_fix.md  45_v1743_support.md  46_sw_fine_timestamp.md  47_v1743_standard_mode_redesign.md  48_v1743_tuneup_double_apply_crash.md  49_amax_fw_integration.md  50_mac_usb_eem_driver.md  51_pha2_integration.md  52_refactor_sprint_2026-q2.md  53_firmware_mismatch_hardfail.md  54_ui_audit_2026-q2.md  55_amax_10g_fw_round2.md  57_delila2root_always_sort.md  58_code_review_2026-06-10.md  59_eliade_trap_autotune.md  59_eliade_trap_autotune_ja.md  60_amax_fw_selfconfig.md  61_delila2root_cpp.md  62_v1743_drop_rollover.md  (+4 more)
TODO/archive/: 19_settings_ui.md  22_amax_decoder_implementation.md  24_l2_filter_implementation.md  25_apply_digitizer_via_zmq.md  26_multi_digitizer_scaling.md  28_tuneup_mode.md  29_channel_registration.md  31_parameter_validation.md  34_tuneup_software_trigger.md  35_waveform_recording_warning.md  36_accumulated_waveform.md  42_a3818_driver_patch.md  43_trigger_loss_detection.md  45_v1743_support.md  49_amax_fw_integration.md  50_mac_usb_eem_driver.md  55_amax_10g_fw_round2.md  56_delila2root_waveform_support.md  58_code_review_2026-06-10.md  61_delila2root_cpp.md  62_v1743_drop_rollover.md  completed_2026H1_details.md
TODO/event-builder/: 38_eb_unification_mimalloc.md  IMPLEMENTATION.md  SPECIFICATION.md
config/: agent_eb_replay.toml  agent_eb_replay_b.toml  agent_local.toml  agent_remote.toml  config_147_psd1.toml  config_3MV_20260312.toml  config_76_production.toml  config_amax_56.toml  config_amax_56_2Digitizer.toml  config_combined.toml  config_eb_replay_stack.toml  config_eb_replay_stack_b.toml  config_eb_test.toml  config_emulator_local_test.toml  config_es1.toml  config_es2.toml  config_pha1_test.toml  config_pha2_56.toml  config_pha2_56_phys.toml  config_pha2_56_signed_probe_test.toml  config_pha2_thrput.toml  config_psd1_distributed.toml  config_psd1_shadow_test.toml  config_psd1_test.toml  config_psd2_57.toml  config_psd2_allparams_test.toml  config_psd2_real.toml  config_psd2_test.toml  config_psd2_thrput.toml  config_psd2_waveform.toml  config_sn01_psd1.toml  config_x743_ci_test.toml  config_x743_test.toml  histograms_sn01.json
config/digitizers/: amax_56.json  amax_56_10G.json  amax_56_10G_slave.json  amax_56_slave.json  amax_test.json  digitizer_0.json  es2_v1725_pha.json  monitor_layout.json  pha1_template.json  pha1_test.json  pha2_56.json  pha2_56_phys.json  pha2_56_signed_probe_test.json  pha2_thrput.json  psd1_sn53.json  psd1_sn54.json  psd1_sn56.json  psd1_sn59.json  psd1_sn69.json  psd1_test.json  psd2_56.json  psd2_57.json  psd2_all_params_test.json  psd2_production.json  psd2_thrput.json  psd2_waveform.json  sn01_v1730_psd.json  x743_ci_test.json  x743_test.json
delila-derive/: Cargo.toml
delila-derive/src/: lib.rs
docker/: docker-compose.yml  mongo-init.js
docker/elog/: Dockerfile  elogd.cfg
docs/: a3818_driver_analysis.md  amax_firmware_trigger_modification.md  amax_fw_update_manual.md  amax_fw_update_manual_en.md  chSettings.json  compass_devtree_mapping.md  component_architecture.md  control_system_design.md  digitizer_system_spec.md  event_bridge_wire_format.md  event_builder_design.md  event_builder_guide.md  offline_event_builder_manual.md  operations_manual.md  operations_manual_en.md  peak_fitting_design.md  pha1_decoder_spec.md  psd1_debug_tool.md  psd1_pha1_parameter_reference.md  root_sink_manual.md  ui_audit_2026-05-07.md  waveform_decoding.md  x743_dpp_ci_parameters.md
docs/devtree_examples/: dt5730b_pha1_sn990.json  dt5730b_psd1_sn990.json  vx2730_dppopen_sn52622.json  vx2730_pha2_sn52622.json  vx2730_psd2_sn52622.json
docs/future_plan/: claude_opinion.md  gemini_opinion.md
docs/plans/: 2026-02-10_tuneup-init-fix.md  2026-02-10_tuneup-waveform-zoom.md  2026-02-11_online-event-builder.md  cross_run_eos_fix.md  decode_loop_parallelization.md  delila2root.md  energy_calibration_psd.md  event_builder_unified.md  grafana_monitoring.md  online_event_builder_v2.md  oxyroot_benchmark_results.md  parameter_validation.md  pha2_throughput_results.md  rollover_tracker_design.md  start_stop_restructure.md  stop_command_timeout.md  trigger_loss_detection.md  x743_integration.md  x743_standard_mode_design.md  (+1 more)
examples/: check_record_length.rs  dump_amax_params.rs  test_dig1_endpoint.rs  test_oxyroot.rs
macros/: energy_spectrum.C  mod6_mod7_correlation.C  plot_time_alignment.C  read_delila.C
manual/: config_toml_manual_EN.md  config_toml_manual_JP.md
schemas/: chSettings.schema.json  eb_config.schema.json  timeSettings.schema.json
scripts/: bench_writers.sh  bench_writers_sweep.sh  compress_run.sh  deploy.sh  deploy_reader.sh  eb_integration_test.sh  gzip_old_logs.sh  pha2_transition_stress.py  plot_throughput.py  setup_caen_felib.sh  start_daq.sh  start_remote_reader.sh  stop_daq.sh  throughput_sweep.py  throughput_sweep.sh  update_amax_fw.sh
src/: lib.rs
src/common/: cli.rs  (+7 more)
tests/: eb_integration.rs  felib_integration_test.rs
tools/amax_viewer/: Cargo.toml  MANUAL.md  README.md  TODO.md  build.rs  fw_params.json  register_defs.json
tools/amax_viewer/docs/: test_mode_design.md
tools/amax_viewer/src/: main.rs
(+193 files in other folders)
