[package]
name = "delila-rs"
version = "0.1.0"
edition = "2021"
description = "High-performance DAQ system for nuclear physics experiments"
license = "MIT"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# ZeroMQ (Tokio bindings)
tmq = "0.4"
zmq = "0.10"
futures = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rmp-serde = "1"
toml = "0.8"

# Error handling
thiserror = "1"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Random (for emulator)
rand = "0.8"
rand_distr = "0.4"

# High-performance synchronization primitives
parking_lot = "0.12"
dashmap = "6"

# Checksum
xxhash-rust = { version = "0.8", features = ["xxh64"] }

# CLI argument parsing
clap = { version = "4", features = ["derive", "env"] }

# Web API
axum = "0.7"
tower-http = { version = "0.5", features = ["cors", "compression-gzip", "fs"] }

# Swagger / OpenAPI
utoipa = { version = "4", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "7", features = ["axum"] }
bytes = "1.11.0"

# MongoDB
mongodb = "3"
bson = "2"
chrono = { version = "0.4", features = ["serde"] }

# ROOT file output (optional)
oxyroot = { version = "0.1", optional = true }

# Parallel processing
rayon = "1.10"

# MPMC channels for event builder pipeline
crossbeam-channel = "0.5"

[features]
default = []
root = ["oxyroot"]

[build-dependencies]
bindgen = "0.70"
cc = "1"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"

[[bin]]
name = "emulator"
path = "src/bin/emulator.rs"

[[bin]]
name = "data_sink"
path = "src/bin/data_sink.rs"

[[bin]]
name = "merger"
path = "src/bin/merger.rs"

[[bin]]
name = "controller"
path = "src/bin/controller.rs"

[[bin]]
name = "operator"
path = "src/bin/operator.rs"

[[bin]]
name = "caen_info"
path = "src/bin/caen_info.rs"

[[bin]]
name = "monitor"
path = "src/bin/monitor.rs"

[[bin]]
name = "recorder"
path = "src/bin/recorder.rs"

[[bin]]
name = "storage_bench"
path = "src/bin/storage_bench.rs"

[[bin]]
name = "recover"
path = "src/bin/recover.rs"

[[bin]]
name = "event_bridge"
path = "src/bin/event_bridge.rs"

[[bin]]
name = "reader"
path = "src/bin/reader.rs"

[[bin]]
name = "amax_register_test"
path = "src/bin/amax_register_test.rs"

[[bin]]
name = "amax_data_test"
path = "src/bin/amax_data_test.rs"

[[bin]]
name = "amax_selftrigger_test"
path = "src/bin/amax_selftrigger_test.rs"

[[bin]]
name = "amax_testpulse_test"
path = "src/bin/amax_testpulse_test.rs"

[[bin]]
name = "amax_rawdump"
path = "src/bin/amax_rawdump.rs"

[[bin]]
name = "amax_opendpp_test"
path = "src/bin/amax_opendpp_test.rs"

[[bin]]
name = "amax_energy_check"
path = "src/bin/amax_energy_check.rs"

[[bin]]
name = "event_builder"
path = "src/bin/event_builder.rs"
required-features = ["root"]

[[bin]]
name = "online_event_builder"
path = "src/bin/online_event_builder.rs"
required-features = ["root"]

[[bin]]
name = "eb_test_sender"
path = "src/bin/eb_test_sender.rs"
required-features = ["root"]

[[bin]]
name = "psd1_waveform_test"
path = "src/bin/psd1_waveform_test.rs"

[[bin]]
name = "psd1_raw_dump"
path = "src/bin/psd1_raw_dump.rs"

[[bin]]
name = "node_agent"
path = "src/bin/node_agent.rs"

[[bin]]
name = "psd1_timing_test"
path = "src/bin/psd1_timing_test.rs"

[[example]]
name = "test_oxyroot"
required-features = ["root"]
