[package]
name = "amax_viewer"
version = "0.1.0"
edition = "2021"
description = "AMax Firmware Development Tool - 2D Histogram Viewer"
default-run = "amax_viewer"

[dependencies]
# GUI
eframe = { version = "0.31", default-features = false, features = ["default_fonts", "wgpu", "x11", "wayland"] }
egui_plot = "0.31"

# CAEN access (using delila-rs as path dependency)
delila-rs = { path = "../.." }

# Async runtime for potential future use
tokio = { version = "1", features = ["rt", "macros"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Error handling
anyhow = "1"

# Serialization for parameter persistence
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"

# ROOT file output
oxyroot = "0.1"
